# skaPanel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  like.md  lv_conf.h  readme.md
opencv_demo/: face_id.py
src/: main.cpp  main.hpp
src/assets/lottie/: face_id.json  face_id_check_error.json  face_id_check_success.json
src/base/: base.cpp  base.hpp  user.hpp
src/components/welcome/: welcome.cpp  welcome.h
src/libs/BaiduFaceID/: BaiduFaceID.cpp  BaiduFaceID.h
